tests/errors/time_make_non_int.ki
discard import("time").make("x", 1, 1)
